--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url("../images/news.png");
+    height:100vh;
+}
+
+
+
 @media (max-width: 767px) {
     .navbar-brand {
         text-align: center;
