--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-dark bg-dark nav-justify-content-center">
-    <span class="navbar-brand h1"><h1>Onion Scraper||Everything Fake, All the time</h1></span>
+    <span class="navbar-brand h1">
+        <h3>Onion Scraper || Everything Fake, All the time</h3>
+    </span>
 </nav>
 
-<div class="jumbotron">
-    <div class="container">
+<div class="container">
+    <div class="jumbotron-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h1>STUFF!!!!</h1>
+                <div id="articles"></div>
+                <div id="notes"></div>
             </div>
         </div>
     </div>
