--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,33 @@
-/* body {
-    background-image: url("../images/news.png");
+/* .cover {
+    background-image: url("../images/npr.png");
+    background-repeat: no-repeat;
     height:100%;
-    width:100%;
+    background-position: center;
 } */
 
+body {
+    background-image: url("../images/PrettyNews.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height:100vh;
+    width:100%;
+}
 
+.links{
+    font-size: 18px;
+    color:#fff;
+    -webkit-text-stroke: .5px #000 
+}
+
+p {
+    font-size: 24px;
+    color:#fff;
+    -webkit-text-stroke: .5px #000 
+}
+
+ul {
+    list-style-type: none;
+}
 
 @media (max-width: 767px) {
     .navbar-brand {
