--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">NPR News Scraper</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <button class="btn btn-primary mx-3" id= "scrapeBtn" href="#">Scrape new Articles</button>
+        <button class="btn btn-primary mx-3" id="scrapeBtn" href="#">Scrape new Articles</button>
       </li>
       <li class="nav-item">
         <button class="btn btn-success" id="savedArticleBtn" href="#">Saved Articles</button>
@@ -16,20 +17,35 @@
 </nav>
 
 <div class="container">
-    <div class="jumbotron-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div id="articles">
-                    <table id="results">
-                            {{!-- {{log data}} --}}
-                            {{#each data}}
-                            <li>{{this.title}}</li>
-                            <li>{{this.link}}</li>
-                            {{/each}}
-                    </table>
-                </div>
-                <div id="notes"></div>
-            </div>
+  <div class="jumbotron-fluid">
+    <div class="row">
+      <div class="col-md-6">
+        <div id="articles">
+          <ul>
+            {{!-- {{log data}} --}}
+            {{#each data}}
+            <li>
+              <p>{{this.title}}</p>
+            </li>
+            <li class= "links">
+              {{this.link}}
+            </li>
+            <hr>
+            {{/each}}
+          </ul>>
         </div>
+      </div>
+      <div class="col-md-4 offset-2">
+        <div id="notes">
+          <form id="commentForm">
+            <div class="form-group">
+              <label for="formComment">Your Comment</label>
+              <textarea class="form-control" id="formComment" rows="3"></textarea>
+            </div>
+            <button type="submit" id="commentSubmit" class="btn btn-info">Submit</button>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
