--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
               <h4>{{this.title}}</h4>
             </li>
             <li class="links">
-              <a>{{this.link}}</a>
+              <a href="{{this.link}}">{{this.link}}</a>
               <div id="notes">
                 <button class="btn btn-info" id="showNotes">Show Notes</button>
               </div>
