--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,19 +1,26 @@
-/* .cover {
-    background-image: url("../images/npr.png");
-    background-repeat: no-repeat;
-    height:100%;
-    background-position: center;
-} */
 
 body {
     background-image: url("../images/PrettyNews.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height:100vh;
-    width:100%;
+    height:100%;
 }
 
 a{
+    font-size: 18px;
+    color:#fff;
+    -webkit-text-stroke: .5px #000;
+    cursor: pointer;
+}
+
+a:hover{
+    font-size: 18px;
+    color:#fff;
+    -webkit-text-stroke: .5px #000;
+    cursor: pointer;
+}
+
+a:active{
     font-size: 18px;
     color:#fff;
     -webkit-text-stroke: .5px #000;
